# azicoin

./: README.md  configure.ac
contrib/: rename_binaries.sh
contrib/examples/: azicoin.conf
src/: Makefile.am  chainparams.cpp  validation.cpp
src/qt/: bitcoinunits.cpp  optionsmodel.cpp
tools/: Makefile  genesis_finder.cpp
